# codecrafters-bittorrent-rust

./: .gitignore  Cargo.toml  README.md  todo.md
src/: client.rs  database.rs  lib.rs  main.rs  messages.rs  peer.rs  torrent.rs  tracker.rs
src/core/: torrent.rs
src/database/: mod.rs
src/extensions/: factory.rs  handshake.rs  mod.rs
src/extensions/magnet_links/: before_download_manager.rs  metadata_msg.rs  metadata_piece_manager.rs  metadata_requester.rs  mod.rs  peer_manager_init.rs
src/messages/: client_identifier.rs  mod.rs  payloads.rs
src/messages/extensions/: magnet_links.rs  mod.rs
src/peer/: conn.rs  error.rs  event_loop.rs  extensions.rs  handshake.rs  initial_handshake.rs  mod.rs  peer_data.rs  states.rs
src/peer_manager/: error.rs  file_manager.rs  mod.rs  req_preparer.rs
src/peer_manager/piece_manager/: file_manager.rs  mod.rs  piece_selector.rs  req_preparer.rs
src/req_manager/: error.rs  file_manager.rs  mod.rs  req_preparer.rs
