[package]
name = "codecrafters-bittorrent"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
bincode = "2.0.1"
bytes = "1.3.0" # helps wrap responses from reqwest
clap = { version = "4.0.32", features = ["derive"] } # creating a cli
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
rand = "0.9.2"
regex = "1" # for regular expressions
reqwest = { version = "0.11.18", features = [
    "json",
    "blocking",
] } # http requests
serde = { version = "1.0.136", features = ["derive"] } # for json mangling
serde_bencode = "0.2.3" # for bencode encoding/decoding
serde_bytes = "0.11.12" # for dealing with bytes
serde_derive = "1.0.219"
serde_json = "1.0.105" # for json mangling
serde_repr = "0.1.20"
serde_urlencoded = "0.7.1" # for url encoding
sha1 = "0.10.1" # hashing
surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }
tempfile = "3" # creating temporary directories
thiserror = "1.0.38" # error handling
tokio = { version = "1.23.0", features = ["full"] } # async http requests
tokio-util = { version = "0.7.16", features = ["full"] }
tracing-mutex = "0.3.2"
url = { version = "2.5.7", default-features = false }
